# household-finances

./: .dockerignore  .gitignore  .pre-commit-config.yaml  dockerfile  household-finances-config.yaml  pyproject.toml
.github/workflows/: build-image.yml  ci-main.yml  ci-pr.yml  ci.yml  deploy-apprunner.yml  deploy-dev.yml  deploy.yml  promote.yml
app/: config.py  import_entries.py  main.py
app/api/: accounts.py  audit.py  debts.py  entries.py  household.py  summaries.py  users.py
app/models/: enums.py  schemas.py
app/models/schemas/: account.py  audit.py  debt.py  entry.py  household.py  membership.py  user.py
app/services/: auth.py  fetchers.py  roles.py  storage.py  triggers.py  utils.py
scripts/: import_entries.py  safe_due_dates.py
tests/: conftest.py  test_accounts.py  test_audit.py  test_debts.py  test_entries.py  test_households.py  test_summaries.py  test_users.py
