[project]
name = "household-finances"
version = "0.1.0"
description = ""
authors = [
    {name = "Alejandro Daniel Torossian",email = "alejandro.torossian@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "ruff (>=0.9.6,<0.10.0)",
    "boto3 (>=1.36.22,<2.0.0)",
    "pyproject-hooks (>=1.2.0,<2.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "s3fs (>=2025.3.2,<2026.0.0)",
    "pyarrow (>=8.0.0,<19.0.0)",
    "awswrangler (<=3.9)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "jwt (>=1.4.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "src", from = "household_finances"}]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8.0"
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23"
httpx = "^0.27"
moto = "^5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
fix = true
exclude = ["*.ipynb"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint]
ignore = ["D211", "D213", "COM812"]
